# discord-rp

./: .gitignore  README.md
discord-rp/: Cargo.toml
discord-rp/crates/rp-cli/: Cargo.toml
discord-rp/crates/rp-cli/src/: main.rs
discord-rp/crates/rp-core/: Cargo.toml
discord-rp/crates/rp-core/src/: activity.rs  client.rs  config.rs  error.rs  lib.rs
docs/: custom-rp-project-plan.md
