[package]
name = "rp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Discord Rich Presence コアライブラリ"

[dependencies]
discord-rich-presence.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
